fix(home): Fix contributors image width on mobile - Prevent overflow of image by setting width to 100%
Fixes #51

--- a/src/_assets/scss/_tdevs_custom.scss
+++ b/src/_assets/scss/_tdevs_custom.scss
@@ -170,3 +170,7 @@
 .contributors-cta-container {
   margin-top: 20px;
 }
+
+.open-source-contributors-image {
+  width: 100%;
+}
